add to app.js file by eduardo

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Hello world</title>
 </head>
 <body>
+    <p id="dom"></p>
     <h1>Juan Antonio</h1>
     <h2>Eduardo</h2>
     <h3>Victor manuel</h3>
 </body>
+<script src="./app.js"></script>
 </html>
